--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -93,7 +93,8 @@
   "absorb": {
     "externalDepartmentId": "Development",
     "samlIdentityProviderId": "C03q5hexf",
-    "samlServiceProviderId": "133137951028"
+    "samlServiceProviderId": "133137951028",
+    "redirectMoodleUser": true
   },
   "moodle": {
     "host": "aoudev.nnlm.gov",
