Add feature flag

--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -97,6 +97,7 @@
     "redirectMoodleUser": true
   },
   "moodle": {
+    "trainingMigrationPauseActive": false,
     "host": "aoudev.nnlm.gov",
     "credentialsKeyV2": "moodle-key-v2.txt"
   },
