--- a/api/config/config_preprod.json
+++ b/api/config/config_preprod.json
@@ -97,6 +97,7 @@
     "redirectMoodleUser": false
   },
   "moodle": {
+    "trainingMigrationPauseActive": false,
     "host": "aou.nnlm.gov",
     "credentialsKeyV2": "moodle-key-v2.txt"
   },
