--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -6771,6 +6771,9 @@ components:
         shibbolethUiBaseUrl:
           type: string
           description: The base URL to use for client-side Shibboleth redirects.
+        trainingMigrationPauseActive:
+          type: boolean
+          description: Whether the Moodle to Absorb migration pause is active.
         enableComplianceTraining:
           type: boolean
           description: Whether the Compliance Training access module is enabled.
