--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -209,7 +209,7 @@ commands:
                 fi
               fi
             fi
-          name: "Halt job if '<< parameters.dir_names >>' directory does not exist"
+          name: "Halt job if code in '<< parameters.dir_names >>' directories are not changed"
 
   halt-directory-check:
     description: "Exiting job because depend files in the following path do not exist: << parameters.dir_name >>"
