--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -212,7 +212,7 @@ commands:
           name: "Halt job if code in '<< parameters.dir_names >>' directories are not changed"
 
   halt-directory-check:
-    description: "Exiting job because depend files in the following path do not exist: << parameters.dir_name >>"
+    description: "Exiting job because << parameters.dir_name >> directory is necessary to execute the rest of this job."
     parameters:
       dir_name:
         type: string
