DT-665 update api urls

--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -71,7 +71,7 @@
   },
   "server": {
     "apiBaseUrl": "http:\/\/localhost:8081",
-    "apiAssetsBaseUrl": "https:\/\/api-dot-all-of-us-workbench-test.appspot.com",
+    "apiAssetsBaseUrl": "https:\/\/api.test.fake-research-aou.org",
     "uiBaseUrl": "http:\/\/localhost:4200",
     "publicApiKeyForErrorReports": "",
     "projectId": "all-of-us-workbench-test",
